// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RSVPItem should match snapshot (self, default) 1`] = `
<MetaItem
  local={
    Object {
      "buttons": Array [
        Object {
          "handler": [MockFunction],
          "icon": "fas fa-ban",
        },
      ],
      "item": Object {
        "date": 0,
        "hidden": Array [],
        "id": "",
        "message": "",
        "time": "9:00 PM",
        "user": Object {
          "id": "id-a",
          "name": "",
        },
        "venue": Object {
          "id": "id-b",
          "name": "",
        },
      },
      "notification": <React.Fragment>
        <p>
          You are going to 
          <MetaVenueLink
            local={
              Object {
                "venue": Object {
                  "id": "id-b",
                  "name": "",
                },
              }
            }
          />
           at 
          9:00 PM
          .
        </p>
        
      </React.Fragment>,
    }
  }
/>
`;

exports[`RSVPItem should match snapshot (self, message) 1`] = `
<MetaItem
  local={
    Object {
      "buttons": Array [
        Object {
          "handler": [MockFunction],
          "icon": "fas fa-ban",
        },
      ],
      "item": Object {
        "date": 0,
        "hidden": Array [],
        "id": "",
        "message": "Message",
        "time": "9:00 PM",
        "user": Object {
          "id": "id-a",
          "name": "",
        },
        "venue": Object {
          "id": "id-b",
          "name": "",
        },
      },
      "notification": <React.Fragment>
        <p>
          You are going to 
          <MetaVenueLink
            local={
              Object {
                "venue": Object {
                  "id": "id-b",
                  "name": "",
                },
              }
            }
          />
           at 
          9:00 PM
          .
        </p>
        <p>
          "
          Message
          "
        </p>
      </React.Fragment>,
    }
  }
/>
`;

exports[`RSVPItem should match snapshot (user, default) 1`] = `
<MetaItem
  local={
    Object {
      "buttons": Array [
        Object {
          "handler": [MockFunction],
          "icon": "fas fa-times",
        },
      ],
      "item": Object {
        "date": 0,
        "hidden": Array [],
        "id": "",
        "message": "",
        "time": "9:00 PM",
        "user": Object {
          "id": "id-a",
          "name": "",
        },
        "venue": Object {
          "id": "id-b",
          "name": "",
        },
      },
      "notification": <React.Fragment>
        <p>
          <MetaUserLink
            local={
              Object {
                "user": Object {
                  "id": "id-a",
                  "name": "",
                },
              }
            }
          />
           is going to 
          <MetaVenueLink
            local={
              Object {
                "venue": Object {
                  "id": "id-b",
                  "name": "",
                },
              }
            }
          />
           at 
          9:00 PM
          .
        </p>
        
      </React.Fragment>,
    }
  }
/>
`;

exports[`RSVPItem should match snapshot (user, message) 1`] = `
<MetaItem
  local={
    Object {
      "buttons": Array [
        Object {
          "handler": [MockFunction],
          "icon": "fas fa-times",
        },
      ],
      "item": Object {
        "date": 0,
        "hidden": Array [],
        "id": "",
        "message": "Message",
        "time": "9:00 PM",
        "user": Object {
          "id": "id-a",
          "name": "",
        },
        "venue": Object {
          "id": "id-b",
          "name": "",
        },
      },
      "notification": <React.Fragment>
        <p>
          <MetaUserLink
            local={
              Object {
                "user": Object {
                  "id": "id-a",
                  "name": "",
                },
              }
            }
          />
           is going to 
          <MetaVenueLink
            local={
              Object {
                "venue": Object {
                  "id": "id-b",
                  "name": "",
                },
              }
            }
          />
           at 
          9:00 PM
          .
        </p>
        <p>
          "
          Message
          "
        </p>
      </React.Fragment>,
    }
  }
/>
`;
